@@ -1,5 +1,9 @@
 2002-04-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
+        * slab.cpp: Add support for turning off degenerate handling.
+
+2002-04-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
         * slab.cpp: Rework handling of degenerate modes.
 
 2002-04-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
